--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@smartive/generator-k8s",
+  "name": "@switch-software-solutions/generator-k8s",
   "version": "0.0.0-development",
   "description": "Yeoman generator for kubernetes resources",
   "main": "generators/app/index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/smartive/generator-k8s.git"
+    "url": "git+https://github.com/Switch-Software-Solutions/generator-k8s.git"
   },
   "engines": {
     "node": "^9.0.0",
@@ -28,18 +28,25 @@
     "ci",
     "bootstrap"
   ],
-  "author": "Christoph Bühler <christoph@smartive.ch> (https://smartive.ch)",
+  "author": "Switch-Software-Solutions <devops@switchsoftware.us> (https://switchsoftware.us/)",
   "license": "MIT",
   "dependencies": {
     "ejs": "^2.5.9",
     "fs-extra": "^5.0.0",
     "lodash": "^4.17.10",
-    "yeoman-generator": "^2.0.4"
+    "yeoman-generator": "^2.0.5"
   },
   "devDependencies": {
-    "del-cli": "^1.1.0",
-    "jest": "^22.4.3",
-    "semantic-release": "^15.1.7",
+    "del-cli": "^4.0.1",
+    "jest": "^27.5.1",
+    "semantic-release": "^19.0.2",
     "yeoman-test": "^1.7.0"
+  },
+  "bugs": {
+    "url": "https://github.com/Switch-Software-Solutions/generator-k8s/issues"
+  },
+  "homepage": "https://github.com/Switch-Software-Solutions/generator-k8s#readme",
+  "directories": {
+    "test": "test"
   }
 }
