modificaciones para secrets

--- a/templates/resources/secret.yml
+++ b/templates/resources/secret.yml
@@ -2,10 +2,6 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: <%= data['secret-name'] %>
-  namespace: <%= data['global-namespace'] %><% if(data['global-app-name'] || data['global-app-tier']) { %>
-  labels:<% if(data['global-app-name']) { %>
-    app: <%= data['global-app-name'] -%><% } %><% if(data['global-app-tier']) { %>
-    tier: <%= data['global-app-tier'] -%><% } %><% } %>
+  name: <% if(data['secret-db']) { %>db-<% } else if(data['secret-server']) { %>server-<% } %><%= data['secret-name'] %>-secret
 data:<% for(const value of data['secret-values']) { %>
   <%= value %><% } %>
