--- a/templates/resources/config.yml
+++ b/templates/resources/config.yml
@@ -2,10 +2,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: <%= data['config-name'] %>
-  namespace: <%= data['global-namespace'] %><% if(data['global-app-name'] || data['global-app-tier']) { %>
-  labels:<% if(data['global-app-name']) { %>
-    app: <%= data['global-app-name'] -%><% } %><% if(data['global-app-tier']) { %>
-    tier: <%= data['global-app-tier'] -%><% } %><% } %>
+  name: <% if(data['config-db']) { %>db-<% } else if(data['config-server']) { %>server-<% } else if(data['config-client']) { %>client-<% } %><%= data['config-name'] %>-config-map
 data:<% for(const value of data['config-values']) { %>
   <%= value %><% } %>
