--- a/templates/resources/service-ClusterIP.yml
+++ b/templates/resources/service-ClusterIP.yml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: <%= data['service-name'] %>-cluster-ip-service
+  name: <% if(data['service-db']) { %>db-<% } else if(data['service-server']) { %>server-<% } else if(data['service-client']) { %>client-<% } %><%= data['service-name'] %>-cluster-ip-service
 spec:
   type: ClusterIP
   selector:
-    component: <%= data['selector-component'] %>
+    component: <% if(data['service-db']) { %>db-<% } else if(data['service-server']) { %>server-<% } else if(data['service-client']) { %>client-<% } %><%= data['service-name'] %>
   ports:
-    - port: 80
-      targetPort: 80
+    - port: <%= data['service-port'] %>
+      targetPort: <%= data['service-port'] %>
